--- a/landingpagegoogle.html
+++ b/landingpagegoogle.html
@@ -46,6 +46,12 @@
                     <a class="minggu" href="">Setting</a>
                 </div>
             </div>
+
+            <div>
+                <div>
+                    <a href="">aldi setiawan</a>
+                </div>
+            </div>
       
 
     </body>
